fix: toast colors for dark mode

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,5 +3,13 @@
   grid-template-rows: max-content max-content 10em;
 
   min-height: 100vh;
+
+  background: var(--background);
+}
+
+.toaster.toaster {
+  color: inherit;
+
+  background: var(--background);
 }
 
